<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.DadosVeiculoActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_dados_veiculo_renavam_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/activity_dados_veiculo_renavam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_renavam"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/activity_dados_veiculo_placa_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@+id/activity_dados_veiculo_renavam_label"
        app:layout_constraintStart_toStartOf="@+id/activity_dados_veiculo_renavam_label"
        app:layout_constraintTop_toBottomOf="@+id/activity_dados_veiculo_renavam_label">

        <EditText
            android:id="@+id/activity_dados_veiculo_placa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_placa"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/activity_dados_veiculo_btn_ok"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/button_ok"
        app:layout_constraintEnd_toEndOf="@+id/activity_dados_veiculo_placa_layout"
        app:layout_constraintStart_toStartOf="@+id/activity_dados_veiculo_placa_layout"
        app:layout_constraintTop_toBottomOf="@+id/activity_dados_veiculo_placa_layout" />
</android.support.constraint.ConstraintLayout>