<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <android.support.v7.widget.CardView
        android:id="@+id/item_multa_card_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        app:cardCornerRadius="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/item_multa_constraint_layout"
            android:background="@drawable/state_selected"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/item_multa_orgao_autuador_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/item_multa_orgao_autuador_label"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_multa_orgao_autuador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="Prefeitura de Suzano"
                app:layout_constraintEnd_toEndOf="@+id/item_multa_situacao"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/item_multa_orgao_autuador_label"
                app:layout_constraintTop_toTopOf="@+id/item_multa_orgao_autuador_label"
                tools:text="Prefeitura de Suzano" />

            <TextView
                android:id="@+id/item_multa_serie_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/item_multa_serie_label"
                android:textSize="14sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/item_multa_orgao_autuador_label"
                app:layout_constraintTop_toBottomOf="@+id/item_multa_orgao_autuador_label" />

            <TextView
                android:id="@+id/item_multa_serie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:text="C"
                app:layout_constraintStart_toEndOf="@+id/item_multa_serie_label"
                app:layout_constraintTop_toTopOf="@+id/item_multa_serie_label"
                tools:text="C" />

            <TextView
                android:id="@+id/item_multa_numero_ait_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/item_multa_numero_ait_label"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/item_multa_numero_ait"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/item_multa_serie"
                app:layout_constraintTop_toTopOf="@+id/item_multa_serie" />

            <TextView
                android:id="@+id/item_multa_numero_ait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0010"
                app:layout_constraintEnd_toEndOf="@+id/item_multa_situacao"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/item_multa_placa"
                app:layout_constraintTop_toTopOf="@+id/item_multa_numero_ait_label"
                tools:text="0010" />

            <TextView
                android:id="@+id/item_multa_data_infracao_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/item_multa_data_infracao_label"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/item_multa_placa_label"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/item_multa_serie_label"
                app:layout_constraintTop_toBottomOf="@+id/item_multa_serie_label" />

            <TextView
                android:id="@+id/item_multa_data_infracao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/item_multa_hora_infracao"
                app:layout_constraintStart_toStartOf="@+id/item_multa_data_infracao_label"
                app:layout_constraintTop_toBottomOf="@+id/item_multa_data_infracao_label"
                tools:text="10/06/2018" />

            <TextView
                android:id="@+id/item_multa_hora_infracao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_multa_data_infracao"
                app:layout_constraintTop_toBottomOf="@+id/item_multa_data_infracao"
                tools:text="00:10" />

            <TextView
                android:id="@+id/item_multa_placa_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/item_multa_placa_label"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/item_multa_placa"
                app:layout_constraintTop_toTopOf="@+id/item_multa_placa" />

            <TextView
                android:id="@+id/item_multa_placa"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/item_multa_pontos"
                app:layout_constraintEnd_toEndOf="@+id/item_multa_situacao"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/item_multa_pontos"
                app:layout_constraintTop_toBottomOf="@+id/item_multa_numero_ait"
                tools:text="ABC-1234" />

            <TextView
                android:id="@+id/item_multa_pontos_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/item_multa_pontos_label"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/item_multa_pontos"
                app:layout_constraintEnd_toStartOf="@+id/item_multa_pontos" />

            <TextView
                android:id="@+id/item_multa_pontos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@+id/item_multa_situacao"
                app:layout_constraintStart_toStartOf="@+id/item_multa_situacao"
                tools:text="4" />

            <TextView
                android:id="@+id/item_multa_situacao_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:text="@string/item_multa_situacao_label"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/item_multa_situacao"
                app:layout_constraintEnd_toStartOf="@+id/item_multa_situacao" />

            <TextView
                android:id="@+id/item_multa_situacao"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="Em análise" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>